sftp/2.0/modules/ROOT/pages/sftp-connector-upgrade-guide.adoc
= Upgrade and Migrate SFTP Connector to Version 2.0  - Mule 4

Upgrade Anypoint Connector for SFTP (SFTP Connector) to version 2.0.0.

== Supported Upgrade Paths

[%header,cols="50a,50a"]
|===
|From Version | To Version
|1.6.0 |2.0.0
|===

== Changes in This Release

This release contains the following changes:

* The system property `mule.sftp.useHomeDirectory` was removed. SFTP Connector now uses the default home directory.
* SFTP Connector 2.0.0 no longer supports the `jcraft library`. The connector now uses the `apache mina sshd` library.
* The *List* operation no longer fetches the content of each file. Now, the payload of each list item contains the complete path to the found file or directory. 
* The SFTP *Regular Size* file attribute is renamed to *Regular File* because its behavior is not related to size. The file attribute value can be a file (`true`) or a directory (`false`).
* SFTP Connector 2.0.0 does not support ciphers `3des-ctr` and `arcfour`. For more information, refer to <<supported-ciphers,Supported Ciphers project>>.
* The SFTP proxy protocol works only with HTTP and SOCKS5.
* SFTP Connector no longer uses `javax.activation` to resolve the media types of the files. The connector now uses `Apache Tika`, which can result in different media file interpretations.
* The connector changed the classes to manage the date from `LocalDateTime` to `ZonedDateTime`.
* The deprecated *Encoding* parameter in the configuration and *Write* operation is removed. The connector uses the Mule's default encoding.
* If the application has Bouncy Castle jars in the classpath, then the connector may alter the providers list by registering BC providers automatically.
// List all changes that affect users, including changed schemas,
// changed data structures, changed POM files, changed and new fields 
// (locations, names, etc) and parameters, deprecated parameters, etc

// Examples:
//
// * The create operation name changed from old-name to new-name.
// * The field-name>is now located in the tab-name tab.
// * What happens with the upgrade? Are changes made to app data? 
// * The single global configuration is divided into operation and source-specific global configurations like:
// ** send-config - used by send-with-sync-mdn and send-with-async-mdn operations.
// ** listener-config - used by as2-listener source.
// ** mdn-listener-config - used by as2-mdn-listener source.
// * Changed namespace from <old-namespace> to <new-namespace>.

// If applicable, use tables to describe new and changed operations and sources. Examples follow: 

////

[[changed_operations]]
== Changed Operations

[%header%autowidth.spread]
|===
|Operation | Description | Parameters

| <operation-name>, for example: *Commit*
a| Enter a description for the operation, for example: Commits the offsets associated to a message or batch of messages consumed in a message listener. a| Specify the operation parameters. Example: Consumer commit key. The consumer commit key to use to commit the message.
|===

[[changed_sources]]
== Changed Sources

[%header%autowidth.spread]
|===
|Source | Earlier version | Parameters

| <name-in-new-version>, for example: *Message listener* | <name-in-oldMessage consumer a| * Poll timeout
* Poll timeout time unit
* Acknowledgment mode
* Number of parallel consumers
|===
////


== Requirements

Ensure that you meet these requirements before you perform the upgrade:


[%header,cols="50a,50a"]
|===
|Software | Version
|Mule |4.3.0 and later
|Anypoint Studio |7.5.0 and later
|JDK |8
|===

== Upgrade Prerequisites

Before you perform the upgrade, you must complete the following:

* Create a backup of your files, data, and configurations in case you need to restore to them. 
// * Do they need to rename or copy over any files before downloading the latest version?

== Upgrade Steps

Follow these steps to perform the upgrade:

. In Anypoint Studio, create a Mule project.
. In *Mule Palette*, click *Search in Exchange*.
. In *Add Dependencies to Project*, enter `SFTP` in the search field.
. In *Available modules*, select *SFTP Connector* and click *Add*.
. Click *Finish*.
. Verify that the SFTP Connector `mule-sftp-connector` version is `2.0.0` in the `pom.xml` file in the Mule project.

Studio upgrades the connector automatically.

// * Download the current version. 
// * Import data?
// * Update the configuration.
// * What does the user need to do after downloading the connector before they can start using it?

== Post Upgrade Steps

After you install the latest version of the connector, follow these steps to complete the upgrade:

// * Do they need to update endpoints? 
// * Do they need to re-create/refactor any customizations?
// * Does the user need to map any files?
// * Verify the upgrade.

=== Verify the Upgrade

After you install the latest version of the connector, verify the upgrade:

. In Studio, verify that there are no errors in the *Problems* or *Console* views.
. Verify that there are no problems in the project `pom.xml` file.
. Test the connection to verify that the operations work.

[[supported-ciphers]]
== Supported Ciphers 

The Apache Mina SSHD library does not support ciphers `3des-ctr` and `arcfour`. Additionally, the library introduces `aes128-gcm`, `aes256-gcm`, and `cc20p1305_openssh` as alternatives.

For details, review the following table:

[%header,cols="50a,50a"]
|===
|http://www.jcraft.com/jsch/[JSCH] - SFTP Connector 1.6 | https://github.com/apache/mina-sshd/blob/sshd-2.9.2/sshd-common/src/main/java/org/apache/sshd/common/cipher/BuiltinCiphers.java[MINA SSHD] - SFTP Connector 2.0
|`blowfish-cbc` |`blowfish-cbc` (Deprecated)
|`3des-cbc` |`3des-cbc` (Deprecated)
|`3des-ctr` | Not supported.
|`aes128-cbc` |`aes128-cbc`
|`aes128-ctr` |`aes128-ctr`
| Not supported. |`aes128-gcm`
|`aes192-cbc`|`aes192-cbc`
|`aes192-ctr` |`aes192-ctr`
|`aes256-cbc`|`aes256-cbc`
|`aes256-ctr`|`aes256-ctr`
| Not supported. |`aes256-gcm`
|`arcfour`| Not supported.
|`arcfour128` |`arcfour128` (Deprecated)
|`arcfour256` |`arcfour256` (Deprecated)
| Not supported. |`cc20p1305_openssh`
|===

== Troubleshooting

// If there are common known issues and errors that occur when upgrading, give troubleshooting tips.

=== Reverting the Upgrade

If you need to revert to the previous version of SFTP Connector, go to Anypoint Studio and in the project’s `pom.xml` file, change the `mule-sftp-connector` dependency version 2.0.0 to the previous version.


== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
